Fixed alignments of overlays on top of video backgrounds; Added incomplete "Register Now" button stylings

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,9 @@
 * {
     color: white;
-    text-align: center;
+    /* text-align: center; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -15,13 +18,19 @@ h3 {
     /* color: white; */
 }
 
-.background-video-container {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-
-    display: flex;
+.background-video {
+    position: absolute; 
+    right: 0; 
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto; 
+    height: auto; 
+    z-index: -100;
+    background-size: cover;
+    overflow: hidden;
     justify-content: center;
+    align-items: center;
 }
 
 .overlay {
@@ -30,8 +39,9 @@ h3 {
     position: absolute;
     top: 10%;
     left: 0;
-    height: 100%;
-    width: 100vw;
+    height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
     align-items: center;
     justify-content: center;
 }
@@ -41,7 +51,19 @@ h3 {
 }
 
 .homepage-buttons {
-    border: 1px;
+    margin-top: 20px;
+    border: 1px solid black;
+    background-color: #c20000;
+    padding: 10px;
     font-family: 'Odibee Sans', sans-serif;
     font-size: 30px;
+}
+
+/* TODO: Fix styling of buttons */
+.homepage-buttons :hover {
+    background-color: white;
+}
+
+.homepage-buttons > h5 :hover {
+    color: black;
 }
